// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add customer Dispatches ADD_CUSTOMER with response data 1`] = `
Array [
  Object {
    "payload": Object {
      "mock": "MockData",
    },
    "type": "ADD_CUSTOMER",
  },
]
`;

exports[`Add customer Dispatches error on error 1`] = `
Array [
  Object {
    "payload": "Unable to add customer",
    "type": "ERROR",
  },
]
`;

exports[`Delete customer Dispatches DELETE_CUSTOMER with customer id 1`] = `
Array [
  Object {
    "payload": Object {
      "_id": "Mock id",
    },
    "type": "DELETE_CUSTOMER",
  },
]
`;

exports[`Delete customer Dispatches error on error 1`] = `
Array [
  Object {
    "payload": "Unable to delete customer",
    "type": "ERROR",
  },
]
`;

exports[`Fetch customers Dispatches FETCH_CUSTOMERS with response data 1`] = `
Array [
  Object {
    "payload": Object {
      "mock": "MockData",
    },
    "type": "FETCH_CUSTOMERS",
  },
]
`;

exports[`Fetch customers Dispatches error on error 1`] = `
Array [
  Object {
    "payload": "Unable to fetch customers.",
    "type": "ERROR",
  },
]
`;

exports[`Login Dispatches UPDATE_CURRENT_CUSTOMER with response data 1`] = `
Array [
  Object {
    "payload": Object {
      "mock": "MockData",
      "token": "MockToken",
    },
    "type": "UPDATE_CURRENT_CUSTOMER",
  },
]
`;

exports[`Update customer Dispatches UPDATE_CUSTOMER with given data 1`] = `
Array [
  Object {
    "payload": Object {
      "mockData": "MockData",
    },
    "type": "UPDATE_CUSTOMER",
  },
]
`;

exports[`Update customer Dispatches error on error 1`] = `
Array [
  Object {
    "payload": "Unable to update customer",
    "type": "ERROR",
  },
]
`;
